--- a/office/KAEC_BIK/HTML/kaec-bik-dropdown/index.html
+++ b/office/KAEC_BIK/HTML/kaec-bik-dropdown/index.html
@@ -73,11 +73,7 @@
                                 </li>
                                 <li class="megamenuList"><a href="walk-in-the-city.html">WALK IN THE CITY</a>
                                     <ul>
-                                        <li><a href="#">Al Murooj</a></li>
-                                        <li><a href="#">Al Waha</a></li>
-                                        <li><a href="#">Al Talah Gardens</a></li>
-                                        <li><a href="#">Al Shurooq</a></li>
-                                        <li><a href="#">Bay La Sun</a>
+                                        <li><a href="#">Al Murooj</a>
                                             <ul>
                                                 <li><a href="#">Al Murooj</a></li>
                                                 <li><a href="#">Al Waha</a></li>
@@ -85,6 +81,18 @@
                                                 <li><a href="#">Al Shurooq</a></li>
                                                 <li><a href="#">Bay La Sun</a></li>
                                             </ul>
+                                        </li>
+                                        <li><a href="#">Al Waha</a></li>
+                                        <li><a href="#">Al Talah Gardens</a></li>
+                                        <li><a href="#">Al Shurooq</a></li>
+                                        <li><a href="#">Bay La Sun</a>
+                                            <!-- <ul>
+                                                <li><a href="#">Al Murooj</a></li>
+                                                <li><a href="#">Al Waha</a></li>
+                                                <li><a href="#">Al Talah Gardens</a></li>
+                                                <li><a href="#">Al Shurooq</a></li>
+                                                <li><a href="#">Bay La Sun</a></li>
+                                            </ul> -->
                                         </li>
                                     </ul>
                                 </li>
